# Unthinkable

./: .gitignore  README.md  package-lock.json  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/ai/: graph.py  health.py  llm.py  outputs.py
backend/app/ai/prompts/: __init__.py
backend/app/api/: deps.py
backend/app/api/v1/: action_items.py  chat.py  dashboard.py  exports.py  meetings.py  reports.py  router.py  transcripts.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: action_item.py  base.py  chat.py  event.py  meeting.py  report.py  transcript.py
backend/app/repositories/: action_items.py  chat.py  chunks.py  events.py  meetings.py  reports.py  transcripts.py
backend/app/schemas/: action_item.py  chat.py  dashboard.py  meeting.py  report.py  transcript.py
backend/app/services/: analytics.py  chat.py  dashboard.py  email.py  exports.py  meetings.py  processing.py  storage.py
backend/app/transcription/: base.py  deepgram.py  whisper.py
backend/app/workers/: dispatcher.py
backend/tests/: test_export_markdown.py  test_health_score.py  test_meeting_service.py  test_processing_utils.py
database/: schema.sql
database/migrations/: README.md
docs/: 01-architecture.md  02-folder-structure.md  03-api-design.md  04-wireframes.md  05-demo-script.md  06-full-project-reference.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
tests/: README.md
(+40 files in other folders)
