[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "meetiq-backend"
version = "0.1.0"
description = "MeetIQ - AI Meeting Intelligence Platform (FastAPI backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "PyJWT>=2.9",
    "httpx>=0.27",
    "structlog>=24.1",
    "langgraph>=0.2.20",
    "google-genai>=1.0",
    "weasyprint>=62",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.11"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008",  # Depends(...) as a default is the idiomatic FastAPI DI pattern
    "UP046", # Generic[T] kept for runtime TypeVar use (Pydantic/typing.Protocol compat)
    "UP047", # same — PEP 695 type params aren't a drop-in here
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
